// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Link /> Variants properly renders a default Link 1`] = `
.emotion-0 {
  font-family: Motiva Sans;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  color: #4466EE;
}

.emotion-0:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:focus {
  outline-offset: 2px;
}

.emotion-0:disabled {
  cursor: not-allowed;
}

.emotion-0:visited {
  color: #4466EE;
}

.emotion-0:hover {
  color: #5577FF;
}

.emotion-0:active {
  color: #4455CC;
}

.emotion-0:focus {
  outline: 1px solid #4455CC;
}

<a
  className="emotion-0 emotion-1"
  href="#test"
>
  Link
</a>
`;

exports[`<Link /> Variants properly renders a muted Link 1`] = `
.emotion-0 {
  font-family: Motiva Sans;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  color: #5B5D61;
}

.emotion-0:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:focus {
  outline-offset: 2px;
}

.emotion-0:disabled {
  cursor: not-allowed;
}

.emotion-0:visited {
  color: #5B5D61;
}

.emotion-0:hover {
  color: #25272D;
}

.emotion-0:active {
  color: #0F0F10;
}

.emotion-0:focus {
  outline: 1px solid #0F0F10;
}

<a
  className="emotion-0 emotion-1"
  href="#test"
>
  Link
</a>
`;
